--- a/Notebooks/01_data.ipynb
+++ b/Notebooks/01_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "bcd5dafa",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "306f9959",
    "metadata": {},
    "outputs": [
@@ -51,19 +51,19 @@
       "Contract Address: 0xe514d9deb7966c8be0ca922de8a064264ea6bcd4\n",
       "Homepage: https://roninchain.com\n",
       "Logo URL: https://coin-images.coingecko.com/coins/images/20009/large/photo_2024-04-06_22-52-24.jpg?1712415367\n",
-      "RON Price (USD): 0.487775\n",
-      "Market Cap (USD): 338095397\n",
-      "24h Volume (USD): 6394698\n",
+      "RON Price (USD): 0.502332\n",
+      "Market Cap (USD): 347671236\n",
+      "24h Volume (USD): 7341279\n",
       "Circulating Supply: 693121119.9637812\n",
       "Total Supply: 1000000000.0\n",
       "Max Supply: 1000000000.0\n",
-      "Fully Diluted Valuation (USD): 487786892\n",
-      "Total Value Locked (USD): 9190493\n",
-      "Market Cap to TVL Ratio: 36.79\n",
-      "Price Change % (24h): -1.2916\n",
-      "Price Change % (7d): -6.72772\n",
+      "Fully Diluted Valuation (USD): 501602427\n",
+      "Total Value Locked (USD): 9295086\n",
+      "Market Cap to TVL Ratio: 37.4\n",
+      "Price Change % (24h): 0.74721\n",
+      "Price Change % (7d): -2.78895\n",
       "Number of Exchanges: 100\n",
-      "Sample Exchange: Bitget - RON / USDT\n"
+      "Sample Exchange: Binance - RONIN / USDT\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "c70742f1",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "['../data/games_overall_activity.joblib']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "93206f19",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "['../data/games_daily_activity.joblib']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
