--- a/Notebooks/01_data.ipynb
+++ b/Notebooks/01_data.ipynb
@@ -51,19 +51,19 @@
       "Contract Address: 0xe514d9deb7966c8be0ca922de8a064264ea6bcd4\n",
       "Homepage: https://roninchain.com\n",
       "Logo URL: https://coin-images.coingecko.com/coins/images/20009/large/photo_2024-04-06_22-52-24.jpg?1712415367\n",
-      "RON Price (USD): 0.480987\n",
-      "Market Cap (USD): 333601115\n",
-      "24h Volume (USD): 30023397\n",
+      "RON Price (USD): 0.464826\n",
+      "Market Cap (USD): 321858277\n",
+      "24h Volume (USD): 5947668\n",
       "Circulating Supply: 693121119.9637812\n",
       "Total Supply: 1000000000.0\n",
       "Max Supply: 1000000000.0\n",
-      "Fully Diluted Valuation (USD): 481302769\n",
-      "Total Value Locked (USD): 8608281\n",
+      "Fully Diluted Valuation (USD): 464360799\n",
+      "Total Value Locked (USD): 8306271\n",
       "Market Cap to TVL Ratio: 38.75\n",
-      "Price Change % (24h): -7.20399\n",
-      "Price Change % (7d): -3.54781\n",
+      "Price Change % (24h): -4.08553\n",
+      "Price Change % (7d): -7.59881\n",
       "Number of Exchanges: 100\n",
-      "Sample Exchange: Binance - RONIN / USDT\n"
+      "Sample Exchange: Bitget - RON / USDT\n"
      ]
     }
    ],
@@ -187,59 +187,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>24.973442</td>\n",
+       "      <td>24.973777</td>\n",
        "      <td>Pixels</td>\n",
        "      <td>167.028604</td>\n",
-       "      <td>235050080</td>\n",
-       "      <td>10854426</td>\n",
+       "      <td>235107009</td>\n",
+       "      <td>10855202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8.116856</td>\n",
+       "      <td>8.141922</td>\n",
        "      <td>Axie Infinity</td>\n",
-       "      <td>165980.084417</td>\n",
-       "      <td>196002030</td>\n",
-       "      <td>8906386</td>\n",
+       "      <td>166920.829219</td>\n",
+       "      <td>196364449</td>\n",
+       "      <td>8907175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18.419783</td>\n",
+       "      <td>18.431888</td>\n",
        "      <td>Lumiterra</td>\n",
        "      <td>1.860900</td>\n",
-       "      <td>40418260</td>\n",
-       "      <td>2341586</td>\n",
+       "      <td>40570452</td>\n",
+       "      <td>2372066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>19.923774</td>\n",
+       "      <td>19.923888</td>\n",
        "      <td>Wild Forest</td>\n",
        "      <td>0.010100</td>\n",
-       "      <td>24330680</td>\n",
-       "      <td>888989</td>\n",
+       "      <td>24332394</td>\n",
+       "      <td>889001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>20.394691</td>\n",
+       "      <td>20.397546</td>\n",
        "      <td>The Machines Arena</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>31467628</td>\n",
-       "      <td>385843</td>\n",
+       "      <td>31590993</td>\n",
+       "      <td>385844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>19.966316</td>\n",
+       "      <td>19.966342</td>\n",
        "      <td>Apeiron</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>33975681</td>\n",
-       "      <td>305385</td>\n",
+       "      <td>33976214</td>\n",
+       "      <td>305392</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>19.562597</td>\n",
+       "      <td>19.563052</td>\n",
        "      <td>Ragnarok: Monster World</td>\n",
        "      <td>58.259846</td>\n",
-       "      <td>3279853</td>\n",
-       "      <td>222784</td>\n",
+       "      <td>3280718</td>\n",
+       "      <td>222798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -259,90 +259,90 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>20.897486</td>\n",
+       "      <td>20.898040</td>\n",
        "      <td>Pixel HeroZ</td>\n",
-       "      <td>3210.715731</td>\n",
-       "      <td>1447412</td>\n",
-       "      <td>52392</td>\n",
+       "      <td>3223.715731</td>\n",
+       "      <td>1447962</td>\n",
+       "      <td>52409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>21.552536</td>\n",
+       "      <td>21.550637</td>\n",
        "      <td>Fishing Frenzy</td>\n",
        "      <td>1.107159</td>\n",
-       "      <td>1565021</td>\n",
-       "      <td>44681</td>\n",
+       "      <td>1577012</td>\n",
+       "      <td>44772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>23.457283</td>\n",
+       "      <td>23.455760</td>\n",
        "      <td>Ronkeverse</td>\n",
        "      <td>192.000000</td>\n",
-       "      <td>29473</td>\n",
-       "      <td>20307</td>\n",
+       "      <td>29498</td>\n",
+       "      <td>20318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>20.528608</td>\n",
+       "      <td>20.529935</td>\n",
        "      <td>Moki Genesis</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>29332</td>\n",
-       "      <td>15023</td>\n",
+       "      <td>29368</td>\n",
+       "      <td>15034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>23.658568</td>\n",
+       "      <td>23.595452</td>\n",
        "      <td>Sabong Saga</td>\n",
        "      <td>50.400000</td>\n",
-       "      <td>48576</td>\n",
-       "      <td>10248</td>\n",
+       "      <td>50079</td>\n",
+       "      <td>10282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>25.337492</td>\n",
+       "      <td>25.337212</td>\n",
        "      <td>Kaidro</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>9447614</td>\n",
+       "      <td>9448317</td>\n",
        "      <td>6247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>23.883669</td>\n",
+       "      <td>23.883352</td>\n",
        "      <td>Cambria</td>\n",
-       "      <td>480278.366133</td>\n",
-       "      <td>227193</td>\n",
-       "      <td>3978</td>\n",
+       "      <td>480443.366133</td>\n",
+       "      <td>227237</td>\n",
+       "      <td>3979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>25.635384</td>\n",
+       "      <td>25.617368</td>\n",
        "      <td>Mark of the Zeal</td>\n",
        "      <td>150.000000</td>\n",
-       "      <td>3428</td>\n",
-       "      <td>2200</td>\n",
+       "      <td>3443</td>\n",
+       "      <td>2208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>24.570618</td>\n",
+       "      <td>24.495964</td>\n",
        "      <td>KttyWorld</td>\n",
-       "      <td>28908.200000</td>\n",
-       "      <td>115311</td>\n",
-       "      <td>2086</td>\n",
+       "      <td>29063.200000</td>\n",
+       "      <td>118153</td>\n",
+       "      <td>2095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>25.434258</td>\n",
+       "      <td>25.411445</td>\n",
        "      <td>Planet Horse</td>\n",
        "      <td>75.000000</td>\n",
-       "      <td>23046</td>\n",
-       "      <td>1964</td>\n",
+       "      <td>24119</td>\n",
+       "      <td>1988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>21.084876</td>\n",
+       "      <td>21.086493</td>\n",
        "      <td>Kojin Genesis</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>767</td>\n",
+       "      <td>770</td>\n",
        "      <td>340</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -351,48 +351,48 @@
       ],
       "text/plain": [
        "    avg_gas_price_in_gwei             game_project  \\\n",
-       "0               24.973442                   Pixels   \n",
-       "1                8.116856            Axie Infinity   \n",
-       "2               18.419783                Lumiterra   \n",
-       "3               19.923774              Wild Forest   \n",
-       "4               20.394691       The Machines Arena   \n",
-       "5               19.966316                  Apeiron   \n",
-       "6               19.562597  Ragnarok: Monster World   \n",
+       "0               24.973777                   Pixels   \n",
+       "1                8.141922            Axie Infinity   \n",
+       "2               18.431888                Lumiterra   \n",
+       "3               19.923888              Wild Forest   \n",
+       "4               20.397546       The Machines Arena   \n",
+       "5               19.966342                  Apeiron   \n",
+       "6               19.563052  Ragnarok: Monster World   \n",
        "7               20.000000               Fableborne   \n",
        "8               20.427213                    Kongz   \n",
-       "9               20.897486              Pixel HeroZ   \n",
-       "10              21.552536           Fishing Frenzy   \n",
-       "11              23.457283               Ronkeverse   \n",
-       "12              20.528608             Moki Genesis   \n",
-       "13              23.658568              Sabong Saga   \n",
-       "14              25.337492                   Kaidro   \n",
-       "15              23.883669                  Cambria   \n",
-       "16              25.635384         Mark of the Zeal   \n",
-       "17              24.570618                KttyWorld   \n",
-       "18              25.434258             Planet Horse   \n",
-       "19              21.084876            Kojin Genesis   \n",
+       "9               20.898040              Pixel HeroZ   \n",
+       "10              21.550637           Fishing Frenzy   \n",
+       "11              23.455760               Ronkeverse   \n",
+       "12              20.529935             Moki Genesis   \n",
+       "13              23.595452              Sabong Saga   \n",
+       "14              25.337212                   Kaidro   \n",
+       "15              23.883352                  Cambria   \n",
+       "16              25.617368         Mark of the Zeal   \n",
+       "17              24.495964                KttyWorld   \n",
+       "18              25.411445             Planet Horse   \n",
+       "19              21.086493            Kojin Genesis   \n",
        "\n",
        "    total_volume_ron_sent_to_game  transaction_count  unique_players  \n",
-       "0                      167.028604          235050080        10854426  \n",
-       "1                   165980.084417          196002030         8906386  \n",
-       "2                        1.860900           40418260         2341586  \n",
-       "3                        0.010100           24330680          888989  \n",
-       "4                        0.000000           31467628          385843  \n",
-       "5                        0.000000           33975681          305385  \n",
-       "6                       58.259846            3279853          222784  \n",
+       "0                      167.028604          235107009        10855202  \n",
+       "1                   166920.829219          196364449         8907175  \n",
+       "2                        1.860900           40570452         2372066  \n",
+       "3                        0.010100           24332394          889001  \n",
+       "4                        0.000000           31590993          385844  \n",
+       "5                        0.000000           33976214          305392  \n",
+       "6                       58.259846            3280718          222798  \n",
        "7                        0.000000            7062393          110278  \n",
        "8                   255195.704884            1121243           97199  \n",
-       "9                     3210.715731            1447412           52392  \n",
-       "10                       1.107159            1565021           44681  \n",
-       "11                     192.000000              29473           20307  \n",
-       "12                       0.000000              29332           15023  \n",
-       "13                      50.400000              48576           10248  \n",
-       "14                       0.000000            9447614            6247  \n",
-       "15                  480278.366133             227193            3978  \n",
-       "16                     150.000000               3428            2200  \n",
-       "17                   28908.200000             115311            2086  \n",
-       "18                      75.000000              23046            1964  \n",
-       "19                       0.000000                767             340  "
+       "9                     3223.715731            1447962           52409  \n",
+       "10                       1.107159            1577012           44772  \n",
+       "11                     192.000000              29498           20318  \n",
+       "12                       0.000000              29368           15034  \n",
+       "13                      50.400000              50079           10282  \n",
+       "14                       0.000000            9448317            6247  \n",
+       "15                  480443.366133             227237            3979  \n",
+       "16                     150.000000               3443            2208  \n",
+       "17                   29063.200000             118153            2095  \n",
+       "18                      75.000000              24119            1988  \n",
+       "19                       0.000000                770             340  "
       ]
      },
      "execution_count": 4,
